# tlm-inference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: SCIConfig.cmake  install_SEAL.cmake
src/: CMakeLists.txt  cleartext_library_fixed_uniform.h  globals.cpp  globals.h  globals_float.cpp  globals_float.h  library_float.h  library_float_common.cpp  library_float_secfloat.cpp
src/BuildingBlocks/: CMakeLists.txt  aux-protocols.h
src/FixedPoint/: CMakeLists.txt  bool-data.cpp  fixed-point.cpp  fixed-point.h
src/FloatPoint/: CMakeLists.txt  floating-point.cpp  floating-point.h  fp-math.cpp  fp-math.h
src/GC/: CMakeLists.txt
src/LinearBeaver/: CMakeLists.txt  beaver.h  linear-beaver.cpp  linear-beaver.h  linear-beaver.hpp  linear_bearver.h  linear_bearver_uniform.h
src/LinearHE/: CMakeLists.txt  utils-HE.cpp
src/LinearOT/: CMakeLists.txt
src/Math/: math-functions.h
src/NonLinear/: CMakeLists.txt  nonLinear.hpp
src/utils/: CMakeLists.txt  net_io_channel.h
tests/: CMakeLists.txt  test_cleartext_math.cpp  test_ring_beaver.cpp  test_ring_bv.cpp  test_ring_gen_beaver.cpp  test_ring_truncation.cpp
tests/dataprocess/: beaver_V_B.inp  beaver_precompute.py  file_utils.py  inputpre_compute.py  test_ring_beaver.cpp
tests/dataprocess/data/: beaver_U_A.inp  beaver_U_B.inp  beaver_V_A.inp  beaver_Z_A.inp  beaver_Z_B.inp  input_x_A.inp  input_x_B.inp
